# chinese-remainder-GPU-type

./: .gitignore  CMakeLists.txt
headers/: crt.h  crt_cpu.h  crt_cu.h  crt_gpu.h  time_test.h
sources/: crt.cpp  crt_cpu.cpp  crt_cu.cu  crt_gpu.cu  main.cu  time_test.cpp
